NetBSD Problem Report #54216
From tsutsui@ceres.dti.ne.jp Sat May 18 23:55:06 2019
Return-Path: <tsutsui@ceres.dti.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id EC0A37A153
for <gnats-bugs@gnats.NetBSD.org>; Sat, 18 May 2019 23:55:05 +0000 (UTC)
Message-Id: <201905182355.x4INt2vI028985@ceres.dti.ne.jp>
Date: Sun, 19 May 2019 08:55:02 +0900 (JST)
From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
Reply-To: tsutsui@ceres.dti.ne.jp
To: gnats-bugs@NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: Inconsistent ifdef in mips/bus_dma.c
X-Send-Pr-Version: 3.95
>Number: 54216
>Category: port-mips
>Synopsis: Inconsistent #ifdef in mips/bus_dma.c
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: port-mips-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun May 19 00:00:01 +0000 2019
>Closed-Date: Sun Jun 21 07:11:23 +0000 2020
>Last-Modified: Sun Jun 21 07:11:23 +0000 2020
>Originator: Izumi Tsutsui
>Release: NetBSD 8.1_RC1
>Organization:
>Environment:
System: NetBSD 8.1_RC1
Architecture: mips
Machine: all mips
>Description:
src/sys/arch/mips/mips/bus_dma.c rev 1.38 has the following ifdefs:
https://nxr.netbsd.org/xref/src/sys/arch/mips/mips/bus_dma.c?r=1.38
191 #ifdef __mips_o32
831 #ifdef _mips_o32
873 #ifdef mips_o32
>How-To-Repeat:
Code inspection.
>Fix:
N/A
>Release-Note:
>Audit-Trail:
From: "Izumi Tsutsui" <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/54216 CVS commit: src/sys/arch/mips/mips
Date: Sun, 14 Jun 2020 14:02:39 +0000
Module Name: src
Committed By: tsutsui
Date: Sun Jun 14 14:02:39 UTC 2020
Modified Files:
src/sys/arch/mips/mips: bus_dma.c
Log Message:
Fix inconsistent mips_o32, _mips_o32, and __mips_o32 macro. PR/54216
Not sure what the original intention was, but no responce for a year,
and no visible regression on Cobalt Qube 2700 (Rm5230) through
whole installation using netbsd-9 based Cobalt RestoreCD/USB.
To generate a diff of this commit:
cvs rdiff -u -r1.40 -r1.41 src/sys/arch/mips/mips/bus_dma.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->pending-pullups
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Thu, 18 Jun 2020 17:37:10 +0000
State-Changed-Why:
[pullup-9 #963]
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/54216 CVS commit: [netbsd-9] src/sys/arch/mips/mips
Date: Sat, 20 Jun 2020 16:22:57 +0000
Module Name: src
Committed By: martin
Date: Sat Jun 20 16:22:57 UTC 2020
Modified Files:
src/sys/arch/mips/mips [netbsd-9]: bus_dma.c
Log Message:
Pull up following revision(s) (requested by tsutsui in ticket #963):
sys/arch/mips/mips/bus_dma.c: revision 1.41
Fix inconsistent mips_o32, _mips_o32, and __mips_o32 macro. PR/54216
Not sure what the original intention was, but no responce for a year,
and no visible regression on Cobalt Qube 2700 (Rm5230) through
whole installation using netbsd-9 based Cobalt RestoreCD/USB.
To generate a diff of this commit:
cvs rdiff -u -r1.38.20.1 -r1.38.20.2 src/sys/arch/mips/mips/bus_dma.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: pending-pullups->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 21 Jun 2020 07:11:23 +0000
State-Changed-Why:
Pullup complete.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.