Fix inconsistent mips_o32, _mips_o32, and __mips_o32 macro.  PR/54216

Not sure what the original intention was, but no responce for a year,
and no visible regression on Cobalt Qube 2700 (Rm5230) through
whole installation using netbsd-9 based Cobalt RestoreCD/USB.